--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#3085ad" />
-    <meta name="description" content="This is the personal web site of Matthias von Deetzen. A passinate creator for the web. A Developer, Administrator and Architect." />
+    <meta name="description" content="Hello! I‘m Matthias von Deetzen. Senior Web Developer specialized to create solutions with Symfony, React and Docker." />
     <meta name="mobile-web-app-capable" content="yes">
 
     <title>Matthias von Deetzen | Skills, experience and interests</title>
